[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/TextDisplay.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FontStd.tres" type="DynamicFont" id=2]
[ext_resource path="res://Audio/Dialogue type.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sprites/UI/BoxNinePatch.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Box tail.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.807843 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.807843 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Header:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.517632, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Header:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.517632, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("EndText:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.517632, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("EndText:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.517632, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BoxLeftStroke:texture_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -64, -64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BoxRightStroke:texture_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -64, -64 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BoxNeutralStroke:texture_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -64, -64 ) ]
}

[node name="TextDisplay" type="Node2D"]
z_index = 1000
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}
font = ExtResource( 2 )
sound_type = ExtResource( 3 )

[node name="Namebox" type="NinePatchRect" parent="."]
visible = false
margin_left = 36.0
margin_top = 100.0
margin_right = 110.0
margin_bottom = 120.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 6, 6 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="NameText" type="Label" parent="Namebox"]
margin_left = 4.0
margin_top = 3.0
margin_right = 35.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "Name"

[node name="BoxLeftStroke" type="Polygon2D" parent="."]
visible = false
z_index = -50
color = Color( 0.572549, 0.701961, 1, 1 )
polygon = PoolVector2Array( 289, 116, 301, 169, 25, 173, 32, 120, 47, 119, 50, 100, 60, 119 )

[node name="BoxLeft" type="Polygon2D" parent="."]
visible = false
z_index = -50
color = Color( 0.0470588, 0.0745098, 0.137255, 1 )
polygon = PoolVector2Array( 287, 118, 297, 167, 28, 171, 34, 122, 49, 121, 51, 105, 59, 121 )

[node name="BoxRightStroke" type="Polygon2D" parent="."]
visible = false
z_index = -50
color = Color( 0.572549, 0.701961, 1, 1 )
polygon = PoolVector2Array( 289, 116, 301, 169, 25, 173, 32, 120, 244, 116, 260, 101, 258, 116 )

[node name="BoxRight" type="Polygon2D" parent="."]
visible = false
z_index = -50
color = Color( 0.0470588, 0.0745098, 0.137255, 1 )
polygon = PoolVector2Array( 287, 118, 297, 167, 28, 171, 34, 122, 246, 118, 258, 104, 256, 118 )

[node name="BoxNeutralStroke" type="Polygon2D" parent="."]
visible = false
z_index = -50
color = Color( 0.572549, 0.701961, 1, 1 )
polygon = PoolVector2Array( 289, 116, 301, 169, 25, 173, 32, 120 )

[node name="BoxNeutral" type="Polygon2D" parent="."]
visible = false
z_index = -50
color = Color( 0.0470588, 0.0745098, 0.137255, 1 )
polygon = PoolVector2Array( 287, 118, 297, 167, 28, 171, 34, 122 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Header" type="Node2D" parent="."]
position = Vector2( 160, 20 )
scale = Vector2( 1e-05, 1e-05 )
__meta__ = {
"_edit_group_": true
}

[node name="HeaderText" type="Label" parent="Header"]
margin_left = -169.0
margin_top = -7.0
margin_right = 169.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
text = "Wow, this is a very long line of text! How convenient!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndText" type="Node2D" parent="."]
position = Vector2( 160, 144 )
scale = Vector2( 1e-05, 1e-05 )
__meta__ = {
"_edit_group_": true
}

[node name="HeaderText" type="Label" parent="EndText"]
margin_left = -169.0
margin_top = -7.0
margin_right = 169.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
text = "Continue the conversation?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tail" type="Sprite" parent="."]
visible = false
position = Vector2( 249, 110 )
z_index = -50
texture = ExtResource( 5 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fadein = SubResource( 1 )
anims/Fadeout = SubResource( 2 )

[node name="AnimationPlayerHeader" type="AnimationPlayer" parent="."]
anims/Fadein = SubResource( 3 )
anims/Fadeout = SubResource( 4 )

[node name="AnimationPlayerEndText" type="AnimationPlayer" parent="."]
anims/Fadein = SubResource( 6 )
anims/Fadeout = SubResource( 7 )

[node name="AnimationPlayerStroke" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/Pulse = SubResource( 5 )

[node name="TimerRollText" type="Timer" parent="."]
wait_time = 0.02

[node name="TimerBuffer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
[connection signal="timeout" from="TimerRollText" to="." method="_on_TimerRollText_timeout"]
[connection signal="timeout" from="TimerBuffer" to="." method="_on_TimerBuffer_timeout"]
